fixed time mode title color in dark mode

--- a/webroot/css/default.css
+++ b/webroot/css/default.css
@@ -1567,7 +1567,7 @@ li a.menuLi {
 #playTitle {
   font-size: 20px;
   font-weight: 800;
-  color: black;
+  color: var(--text-color);
 }
 #playTitleA { color: var(--text-color); }
 #descriptionText { color: var(--text-softer-color); }
